# minigl

./: CMakeLists.txt  README.md  main.c
include/: frame.h  objread.h  raster.h  render.h  terminal.h
include/math/: mat4.h  utils.h  vec2.h  vec3.h  vec4.h
src/: frame.c  objread.c  raster.c  render.c  terminal.c
src/math/: mat4.c  utils.c  vec2.c  vec3.c  vec4.c
